# ros1_foxglove_bridge

./: CMakeLists.txt  nodelets.xml  package.xml
include/websocket_bridge/: generic_service.hpp  param_utils.hpp  service_utils.hpp
launch/: websocket_bridge.launch
src/: param_utils.cpp  service_utils.cpp  websocket_bridge_node.cpp  websocket_bridge_nodelet.cpp
tests/: smoke.test  smoke_test.cpp
websocket_bridge_base/include/websocket_bridge/: base64.hpp  callback_queue.hpp  common.hpp  message_definition_cache.hpp  parameter.hpp  regex_utils.hpp  serialization.hpp  server_factory.hpp  server_interface.hpp  websocket_bridge.hpp  websocket_client.hpp  websocket_logging.hpp  websocket_notls.hpp  websocket_server.hpp  websocket_tls.hpp
websocket_bridge_base/include/websocket_bridge/test/: test_client.hpp
websocket_bridge_base/src/: base64.cpp  parameter.cpp  serialization.cpp  server_factory.cpp  version.cpp.in  websocket_bridge.cpp
websocket_bridge_base/src/test/: test_client.cpp
websocket_bridge_base/tests/: base64_test.cpp  serialization_test.cpp  version_test.cpp
